Fix breadcrumbs layout bug
- Breadcrumbs previously moved down when screen is small

--- a/app/assets/stylesheets/_content.less
+++ b/app/assets/stylesheets/_content.less
@@ -118,6 +118,9 @@ h2 {
     padding-left: 15px;
     padding-right: 15px;
 }
+.primary-content-breadcrumb-row {
+    max-height: 36px;
+}
 .primary-content-breadcrumb {
     padding-left: 0;
     padding-right: 0;
